[package]
name = "pg_tier"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg16"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg_test = []

[dependencies]
pgrx = "=0.11.3"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.17.0"
tokio = { version = "1", features = ["full"] }
aws-smithy-runtime-api = "1.1.7"


[dev-dependencies]
pgrx-tests = "=0.11.3"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
